[package]
name = "pba-omni-node"
description = "A minimal omni node capable of running runtimes without any consensus."
version = "0.0.0"
license = "MIT-0"
authors = ["Kian Paimani	"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = "3.0.1"
jsonrpsee = { version = "0.22", features = ["server"] }

sc-cli = { version = "0.41.0" }
sc-executor = { version = "0.37.0" }
sc-network = { version = "0.39.0" }
sc-service = { version = "0.40.0" }
sc-telemetry = { version = "19.0.0" }
sc-transaction-pool = { version = "33.0.0" }
sc-transaction-pool-api = { version = "33.0.0" }
sc-consensus = { version = "0.38.0" }
sc-consensus-manual-seal = { version = "0.40.0" }
sc-rpc-api = { version = "0.38.0" }
sc-basic-authorship = { version = "0.39.0" }
sc-offchain = { version = "34.0.0" }
sc-client-api = { version = "33.0.0" }
sc-chain-spec = { version = "32.0.0" }

sp-timestamp = { version = "31.0.0" }
sp-api = { version = "31.0.0" }
sp-blockchain = { version = "33.0.0" }
sp-block-builder = { version = "31.0.0" }
sp-io = { version = "35.0.0" }
sp-runtime = { version = "36.0.0" }
sp-version = { version = "34.0.0" }
sp-transaction-pool = { version = "31.0.0" }
sp-session = { version = "32.0.0" }
sp-offchain = { version = "31.0.0" }
sp-core = { version = "32.0.0" }
sp-inherents = { version = "31.0.0" }
sp-keyring = { version = "36.0.0" }
sp-consensus-aura = { version = "0.37.0" }
sp-consensus-grandpa = { version = "18.0.0" }
sp-weights = { version = "31.0.0" }

cumulus-primitives-core = { version = "0.12.0" }

# frame and pallets
pallet-transaction-payment-rpc-runtime-api = { version = "33.0.0" }
pallet-transaction-payment = { version = "33.0.0" }
substrate-frame-rpc-system = { version = "33.0.0" }
frame-system-rpc-runtime-api = { version = "31.0.0" }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
